--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             padding: 10px;
             margin: 10px 0;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            border-radius: 5px.
         }
 
         button {
@@ -66,7 +66,7 @@
             padding: 12px 24px;
             border: none;
             border-radius: 5px;
-            cursor: pointer;
+            cursor: pointer.
         }
 
         button:hover {
@@ -105,12 +105,11 @@
 </head>
 <body>
     <h1>Drexxy - Entertainment For School</h1>
+
     <div class="tutorial">
         <h2>Tutorial</h2>
         <div class="video-container">
-            <video controls width="100%" height="auto">
-                <source src="202310121849.mp4" type="video/mp4">
-            </video>
+            <iframe src="https://drive.google.com/file/d/1U0BjtdNf3XP52MbmdjkAQIqL-NTQhIkr/preview" width="100%" height="100%" allowfullscreen></iframe>
         </div>
     </div>
     <form onsubmit="redirectToLink(); return false;">
